--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -31,7 +32,7 @@
             android:id="@+id/text_view_city_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/city_name"
+            tools:text="@string/city_name"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_large" />
 
@@ -39,7 +40,7 @@
             android:id="@+id/text_view_city_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/city_desc"
+            tools:text="@string/city_desc"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_medium" />
 
